fix: Fixed email sign up styles on mobile

--- a/_includes/css/main.scss
+++ b/_includes/css/main.scss
@@ -65,6 +65,8 @@ footer p {
         border: 1px solid black;
         padding: 3px;
         margin-right: 3px;
+        font-family: serif;
+        border-radius: 0px;
       }
   
       a {
